# 100-Days-Of-Rust

./: .gitignore
Week-01/Day-01_Convert-Ages-To-Days/convert_ages_to_days_botiboti/: Cargo.toml
Week-01/Day-01_Convert-Ages-To-Days/convert_ages_to_days_botiboti/src/: lib.rs  main.rs
Week-01/Day-01_Convert-Ages-To-Days/convert_ages_to_days_brainrake/: Cargo.toml  README.md  index.html
Week-01/Day-01_Convert-Ages-To-Days/convert_ages_to_days_brainrake/examples/: cli.rs
Week-01/Day-01_Convert-Ages-To-Days/convert_ages_to_days_brainrake/examples/web/: Cargo.toml  index.html
Week-01/Day-01_Convert-Ages-To-Days/convert_ages_to_days_brainrake/src/: lib.rs
Week-01/Day-01_Convert-Ages-To-Days/convert_ages_to_days_smorci/: Cargo.toml
Week-01/Day-01_Convert-Ages-To-Days/convert_ages_to_days_smorci/src/: lib.rs  main.rs
Week-01/Day-02_Finding-Nemo/finding_nemo_botiboti/: Cargo.toml
Week-01/Day-02_Finding-Nemo/finding_nemo_botiboti/src/: lib.rs  main.rs
Week-01/Day-03_Barbecue-Skewers/smorci_barbecue_skewers/: Cargo.toml
Week-01/Day-03_Barbecue-Skewers/smorci_barbecue_skewers/data/: skewer.txt
Week-01/Day-03_Barbecue-Skewers/smorci_barbecue_skewers/src/: lib.rs  main.rs
